--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>&lt;my-element&gt;</title>
 
     <!-- Importing Web Component's Polyfill -->
-    <script src="bower_components/platform/platform.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 
     <!-- Importing Custom Elements -->
     <link rel="import" href="src/x-websocket.html">
@@ -15,16 +15,14 @@
     <!-- Using Custom Elements -->
     <x-websocket url="ws://echo.websocket.org"></x-websocket>
     <script>
-		window.addEventListener('polymer-ready', function(e) {
-			var xws = document.querySelector("x-websocket");
-			console.log("xws:", xws);
-			xws.addEventListener("open", function() {
-				console.log("open");
-				xws.send("Hello world !");
-			});
-			xws.addEventListener("message", function(event) {
-				console.log("message", event.detail.data);
-			});
+		var xws = document.querySelector("x-websocket");
+		console.log("xws:", xws);
+		xws.addEventListener("open", function() {
+			console.log("open");
+			xws.send("Hello world !");
+		});
+		xws.addEventListener("message", function(event) {
+			console.log("message", event.detail.data);
 		});
     </script>
 
