--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Using Custom Elements -->
-    <x-websocket url="ws://echo.websocket.org"></x-websocket>
+    <x-websocket auto url="ws://echo.websocket.org"></x-websocket>
     <script>
 		var xws = document.querySelector("x-websocket");
 		console.log("xws:", xws);
@@ -23,6 +23,11 @@
 		});
 		xws.addEventListener("message", function(event) {
 			console.log("message", event.detail.data);
+		});
+
+		window.addEventListener('WebComponentsReady', function(e) {
+			// if not use "auto" property on x-websocket, then open manually with:
+			// xws.open();
 		});
     </script>
 
